--- a/forgot-mpin.html
+++ b/forgot-mpin.html
@@ -8,7 +8,7 @@
   <style>.ok{display:none;color:green;font-weight:600}.err{color:#b00020}</style>
 </head>
 <body>
-  <h2>Forgot mPIN</h2>
+  <h2 class="tophead">Forgot mPIN</h2>
   <div id="step1">
     <label>Phone</label>
     <input id="phone" pattern="\d{10}" />
