--- a/signup.html
+++ b/signup.html
@@ -15,6 +15,7 @@
   </style>
 </head>
 <body>
+  <h2>New User : Signup</h2>
   <div class="overlay">
     <form id="signupForm" class="auth-card">
       <h2 class="header">Create an Account</h2>
