--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="signup.css">
 </head>
 <body>
-  <h2>Login</h2>
+  <h2 class="tophead">Please Login To Proceed</h2>
+  <div>
   <form id="loginForm">
     <label>Phone</label>
     <input name="phone" inputmode="numeric" pattern="\d{10}" maxlength="10" required />
@@ -22,7 +23,7 @@
   <p class="switch-link">
     Don't have an account? <a href="signup.html">Sign Up</a>
   </p>
-
+</div>
 <script>
 const say = t => document.querySelector('#msg').textContent = t || '';
 
