--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     })();
   </script>
 
-  <link rel="stylesheet" href="signup.css">
+  <link rel="stylesheet" href="/public/css/signup.css">
 </head>
 <body>
   <div class="auth-layout">
