--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Create an Account</title>
-  <link rel="stylesheet" href="signup.css">
+  <link rel="stylesheet" href="/public/css/signup.css">
   <style>
     .overlay { min-height:100vh; display:grid; place-items:center; padding:24px; }
     .auth-card { max-width:460px; margin:0 auto; }
@@ -93,7 +93,7 @@
       </div>
     </form>
   </div>
-<script src="google-auth.js"></script>
+<script src="/public/js/google-auth.js"></script>
 <script>
   // make sure google-auth.js defines window.startGoogleSignIn
   document.getElementById('googleBtn').onclick = () => {
