--- a/forgot-mpin.html
+++ b/forgot-mpin.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Forgot mPIN</title>
-  <link rel="stylesheet" href="signup.css">
+  <link rel="stylesheet" href="/public/css/signup.css">
   <style>.ok{display:none;color:green;font-weight:600}.err{color:#b00020}</style>
 </head>
 <body>
